# econstor_scraper

./: api.py  main.py  models.py  pyproject.toml  utils.py
tests/: conftest.py  test_api.py  test_download.py  test_formatting.py  test_models.py  test_save_load.py
